Fix vertical alignment and footer background

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,3 +1,5 @@
+/* Custom CSS in addition to the sticky-footer-navbar Bootstrap template */
+
 html {
   background: linear-gradient(
       rgba(255, 255, 255, 0.45),
@@ -16,14 +18,22 @@ body {
 
 header {
   text-align: center;
-  transform: translate(0, 125%);
+  position: absolute;
+  top: 33%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.cover h1 {
+  font-size: 4em;
+  margin-bottom: 20px;
 }
 
 /* Navbar */
 
 .navbar {
   background-color: rgba(255, 255, 255, 0.5);
-  border-bottom: 1px solid rgb(225, 225, 225);
+  border-bottom: 1px solid rgb(230, 230, 230);
 }
 
 .navbar a {
@@ -39,8 +49,9 @@ header {
 }
 
 /* Footer */
-footer {
-  background-color: rgba(255, 255, 255, 1);
+
+.footer {
+  background-color: rgba(14, 255, 255, 0);
 }
 
 /* Social icons in the footer */
